--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
   
   .form-header {
     position: relative;
-    background-color: #24292e;
+    background-color: #263238;
     width: 100%;
     height: 35px;
     border-radius: 15px 15px 0 0;
@@ -209,7 +209,7 @@ body {
   .title-bar {
     display: flex;
     align-items: center;
-    background-color: #24292e;
+    background-color: #263238;
     margin: 0;
     height: 60px;
   }
@@ -429,7 +429,7 @@ body {
     color: #cccccb;
     width: 100%;
     border: none;
-    background-color: #2a2f33;
+    background-color: #193b3b;
     border-bottom: 1px solid #4d4d4e;
     padding: 10px;
     margin-right: 0px;
